# Openclaw_test

./: 01_调研测试总提示词_SKILL.md  02_低难度案例提示词集.md  03_中难度案例提示词集.md  04_高难度案例提示词集.md  05_极高难度案例提示词集.md  OpenClaw调研测试任务清单.xlsx  README.md  README_OpenClaw测试框架说明.md  pyproject.toml
docs/: F11_TEST_SPEC.md  F14_TEST_SPEC.md  G5_TEST_SPEC.md  OPENCLAW_EXECUTION_RUNBOOK.md  OPENCLAW_SYSTEM_PROMPT.md  REAL_SKILL_SPEC.md
openclaw_eval/: __init__.py  cli.py  models.py  registry.py  reporting.py  runner.py  workspace.py
openclaw_eval/data/: __init__.py  cases.json  skills.json  workflow.json
openclaw_research_eval.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
workspace/docs/skill_template/: SKILL.md  manifest.json
workspace/outputs/reports/: f1.json  f1.md  f16.json  f16.md
