[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-research-eval"
version = "0.1.0"
description = "A realistic OpenClaw-style evaluation system for research workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
openclaw-eval = "openclaw_eval.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["openclaw_eval*"]

[tool.setuptools.package-data]
openclaw_eval = ["data/*.json", "templates/*.md"]
